--- a/tienda.html
+++ b/tienda.html
@@ -89,7 +89,7 @@
             <!-- Carteras -->
             <div class="card-index Carteras">
                 <div class="false-bg"></div>
-                <a href="">Carteras</a>
+                <a href="">Chaquetas</a>
             </div>
         </section>
         <div class="title-container">
@@ -145,7 +145,7 @@
                 <div class="price">$10.500</div>
                 <h2 class="item-title">CAMPERA BRILLITT</h2>
                 <hr>
-                <a href="">COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CAMPERA BRILLITT">COMPRAR</a>
             </div>
             <!-- Camperas -->
             <div class="card-index Calza-biker">
@@ -153,7 +153,7 @@
                 <div class="price">$1500</div>
                 <h2 class="item-title">CALZA BIKER</h2>
                 <hr>
-                <a href="">COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CALZA BIKER">COMPRAR</a>
             </div>
             <!-- Carteras -->
             <div class="card-index Cat-suit">
@@ -161,7 +161,7 @@
                 <div class="price">$3800</div>
                 <h2 class="item-title">CATSUIT</h2>
                 <hr>
-                <a href="">COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CATSUIT">COMPRAR</a>
             </div>
 
         </section>
@@ -172,7 +172,7 @@
                 <div class="price">$7500</div>
                 <h2 class="item-title">CAMPERA LUXY</h2>
                 <hr>
-                <a href="">COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CAMPERA LUXY">COMPRAR</a>
             </div>
             <!-- Camperas -->
             <div class="card-index campera-oversize ">
@@ -180,7 +180,7 @@
                 <div class="price">$9500</div>
                 <h2 class="item-title">CAMPERA OVERSIZE</h2>
                 <hr>
-                <a href="">COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CAMPERA OVERSIZE">COMPRAR</a>
             </div>
             <!-- Carteras -->
             <div class="card-index chaqueta-engomada">
@@ -188,7 +188,7 @@
                 <div class="price">$4500</div>
                 <h2 class="item-title">CHAQUETA ENGOMADA</h2>
                 <hr>
-                <a href="">COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CHAQUETA ENGOMADA">COMPRAR</a>
             </div>
 
         </section>
@@ -200,7 +200,7 @@
                 <div class="price">$3500</div>
                 <h2 class="item-title">TOP ENGOMADO</h2>
                 <hr>
-                <a href="">COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20TOP ENGOMADO">COMPRAR</a>
             </div>
             <!-- Shorts -->
             <div class="card-index pollera-engomada">
@@ -208,7 +208,7 @@
                 <div class="price">$5500</div>
                 <h2 class="item-title">POLLERA ENGOMADA</h2>
                 <hr>
-                <a href="">COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20POLLERA ENGOMADA">COMPRAR</a>
             </div>
             <!-- Shorts -->
             <div class="card-index short-engomado">
@@ -216,7 +216,7 @@
                 <div class="price">$4500</div>
                 <h2 class="item-title">SHORT ENGOMADO</h2>
                 <hr>
-                <a href="">COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20SHORT ENGOMADO">COMPRAR</a>
             </div>
 
         </section>
@@ -228,21 +228,21 @@
                 <div class="price">$7500</div>
                 <h2 class="item-title">POLLERA ECOCUERO</h2>
                 <hr>
-                <a href="">COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20POLLERA ECOCUERO">COMPRAR</a>
             </div>
             <div class="card-index test">
                 <div class="false-bg"></div>
                 <div class="price">$price</div>
                 <h2>PRÓXIMAMENTE</h2>
                 <hr>
-                <a >COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta">COMPRAR</a>
             </div>
             <div class="card-index test">
                 <div class="false-bg"></div>
                 <div class="price">$price</div>
                 <h2>PRÓXIMAMENTE</h2>
                 <hr>
-                <a >COMPRAR</a>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta">COMPRAR</a>
             </div>
         </section>
     </main>
