--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <!-- Carteras -->
             <div class="card-index Carteras">
                 <div class="false-bg"></div>
-                <a href="">Carteras</a>
+                <a href="">chaquetas</a>
             </div>
         </section>
 
@@ -100,7 +100,7 @@
             <p>
                 LLevamos corto tiempo en el mercado, pero demostramos un nivel superior de costura y calidad de nuestras telas
             </p>
-            <a href="">VER MÁS<i class="fa-solid fa-arrow-right"></i></a>
+            <a href="sobreNosotros.html">VER MÁS<i class="fa-solid fa-arrow-right"></i></a>
            </div>
         </section>
     </main>
