--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -70,9 +70,9 @@
             <div class="card-index local-1">
                 <div class="false-bg"></div>
                 <div class="location-cont">
-                    <p>Nombre del local</p>
+                    <p>Futuros locales</p>
                     <div class="location">
-                        <i class="fa-solid fa-location-dot"></i> Lugar 123
+                        <i class="fa-solid fa-location-dot"></i> locación
                     </div>
                 </div>
             </div>
@@ -80,9 +80,9 @@
             <div class="card-index local-2">
                 <div class="false-bg"></div>
                 <div class="location-cont">
-                    <p>Nombre del local</p>
+                    <p>Futuros locales</p>
                     <div class="location">
-                        <i class="fa-solid fa-location-dot"></i> Lugar 123
+                        <i class="fa-solid fa-location-dot"></i> locación
                     </div>
                 </div>
             </div>
@@ -90,9 +90,9 @@
             <div class="card-index local-3">
                 <div class="false-bg"></div>
                 <div class="location-cont">
-                    <p>Nombre del local</p>
+                    <p>Futuros locales</p>
                     <div class="location">
-                        <i class="fa-solid fa-location-dot"></i> Lugar 123
+                        <i class="fa-solid fa-location-dot"></i> locación
                     </div>
                 </div>
             </div>
