--- a/tienda.html
+++ b/tienda.html
@@ -94,7 +94,7 @@
         </section>
         <div class="title-container">
             <hr class="left-line">
-            <h2>TODOS LOS PRODUCTOS</h2>
+            <h2>CATÁLOGO</h2>
             <hr class="right-line">
         </div>
 
@@ -221,6 +221,30 @@
 
         </section>
 
+        <section class="principales-compras-index-cards-container">
+            <!-- Shorts -->
+            <div class="card-index zapato-cuero-negro">
+                <div class="false-bg"></div>
+                <div class="price">$7500</div>
+                <h2 class="item-title">BOTAS DE CUERO</h2>
+                <hr>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20BOTA DE CUERO">COMPRAR</a>
+            </div>
+            <div class="card-index pixie">
+                <div class="false-bg"></div>
+                <div class="price">$5500</div>
+                <h2>ZAPATOS PIXIE</h2>
+                <hr>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20ZAPATOS PIXIE">COMPRAR</a>
+            </div>
+            <div class="card-index greenShoes">
+                <div class="false-bg"></div>
+                <div class="price">$5500</div>
+                <h2>GREEN SHOES</h2>
+                <hr>
+                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20GREEN SHOES">COMPRAR</a>
+            </div>
+        </section>
         <section class="principales-compras-index-cards-container">
             <!-- Shorts -->
             <div class="card-index pollera-eco-cuero">
