--- a/tienda.html
+++ b/tienda.html
@@ -233,14 +233,14 @@
             <div class="card-index pixie">
                 <div class="false-bg"></div>
                 <div class="price">$5500</div>
-                <h2>ZAPATOS PIXIE</h2>
+                <h2 class="item-title">ZAPATOS PIXIE</h2>
                 <hr>
                 <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20ZAPATOS PIXIE">COMPRAR</a>
             </div>
             <div class="card-index greenShoes">
                 <div class="false-bg"></div>
                 <div class="price">$5500</div>
-                <h2>GREEN SHOES</h2>
+                <h2 class="item-title">GREEN SHOES</h2>
                 <hr>
                 <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20GREEN SHOES">COMPRAR</a>
             </div>
@@ -257,14 +257,14 @@
             <div class="card-index test">
                 <div class="false-bg"></div>
                 <div class="price">$price</div>
-                <h2>PRÓXIMAMENTE</h2>
+                <h2 class="item-title">PRÓXIMAMENTE</h2>
                 <hr>
                 <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta">COMPRAR</a>
             </div>
             <div class="card-index test">
                 <div class="false-bg"></div>
                 <div class="price">$price</div>
-                <h2>PRÓXIMAMENTE</h2>
+                <h2 class="item-title">PRÓXIMAMENTE</h2>
                 <hr>
                 <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta">COMPRAR</a>
             </div>
