--- a/tienda.html
+++ b/tienda.html
@@ -54,10 +54,15 @@
         </ul>
         <ul class="mobile-nav-social-list">
             <li class="media-mobile-title">REDES</li>
-            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100083129000783"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
-            <li><a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a target="_blank" href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta"><i class="fa-brands fa-whatsapp"></i>Wapp</a></li>
-            <li><a target="_blank" href="mailto:nikelastyle@gmail.com"><i class="fa-solid fa-envelope"></i>Gmail</a></li>
+            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100083129000783"><i
+                        class="fa-brands fa-facebook"></i>Facebook</a></li>
+            <li><a target="_blank" href="https://www.instagram.com/nikela_style/?igshid=YmMyMTA2M2Y%3D"><i
+                        class="fa-brands fa-instagram"></i>Instagram</a></li>
+            <li><a target="_blank"
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta"><i
+                        class="fa-brands fa-whatsapp"></i>Wapp</a></li>
+            <li><a target="_blank" href="mailto:nikelastyle@gmail.com"><i class="fa-solid fa-envelope"></i>Gmail</a>
+            </li>
         </ul>
     </div>
     <!-- home banner -->
@@ -145,7 +150,8 @@
                 <div class="price">$10.500</div>
                 <h2 class="item-title">CAMPERA BRILLITT</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CAMPERA BRILLITT">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CAMPERA BRILLITT">COMPRAR</a>
             </div>
             <!-- Camperas -->
             <div class="card-index Calza-biker">
@@ -153,7 +159,8 @@
                 <div class="price">$1500</div>
                 <h2 class="item-title">CALZA BIKER</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CALZA BIKER">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CALZA BIKER">COMPRAR</a>
             </div>
             <!-- Carteras -->
             <div class="card-index Cat-suit">
@@ -161,7 +168,8 @@
                 <div class="price">$3800</div>
                 <h2 class="item-title">CATSUIT</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CATSUIT">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CATSUIT">COMPRAR</a>
             </div>
 
         </section>
@@ -172,7 +180,8 @@
                 <div class="price">$7500</div>
                 <h2 class="item-title">CAMPERA LUXY</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CAMPERA LUXY">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CAMPERA LUXY">COMPRAR</a>
             </div>
             <!-- Camperas -->
             <div class="card-index campera-oversize ">
@@ -180,7 +189,8 @@
                 <div class="price">$9500</div>
                 <h2 class="item-title">CAMPERA OVERSIZE</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CAMPERA OVERSIZE">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CAMPERA OVERSIZE">COMPRAR</a>
             </div>
             <!-- Carteras -->
             <div class="card-index chaqueta-engomada">
@@ -188,7 +198,8 @@
                 <div class="price">$4500</div>
                 <h2 class="item-title">CHAQUETA ENGOMADA</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CHAQUETA ENGOMADA">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20CHAQUETA ENGOMADA">COMPRAR</a>
             </div>
 
         </section>
@@ -200,7 +211,8 @@
                 <div class="price">$3500</div>
                 <h2 class="item-title">TOP ENGOMADO</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20TOP ENGOMADO">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20TOP ENGOMADO">COMPRAR</a>
             </div>
             <!-- Shorts -->
             <div class="card-index pollera-engomada">
@@ -208,7 +220,8 @@
                 <div class="price">$5500</div>
                 <h2 class="item-title">POLLERA ENGOMADA</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20POLLERA ENGOMADA">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20POLLERA ENGOMADA">COMPRAR</a>
             </div>
             <!-- Shorts -->
             <div class="card-index short-engomado">
@@ -216,7 +229,8 @@
                 <div class="price">$4500</div>
                 <h2 class="item-title">SHORT ENGOMADO</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20SHORT ENGOMADO">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20SHORT ENGOMADO">COMPRAR</a>
             </div>
 
         </section>
@@ -228,21 +242,24 @@
                 <div class="price">$7500</div>
                 <h2 class="item-title">BOTAS DE CUERO</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20BOTA DE CUERO">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20BOTA DE CUERO">COMPRAR</a>
             </div>
             <div class="card-index pixie">
                 <div class="false-bg"></div>
                 <div class="price">$5500</div>
                 <h2 class="item-title">ZAPATOS PIXIE</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20ZAPATOS PIXIE">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20ZAPATOS PIXIE">COMPRAR</a>
             </div>
             <div class="card-index greenShoes">
                 <div class="false-bg"></div>
                 <div class="price">$5500</div>
                 <h2 class="item-title">GREEN SHOES</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20GREEN SHOES">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20GREEN SHOES">COMPRAR</a>
             </div>
         </section>
         <section class="principales-compras-index-cards-container">
@@ -252,21 +269,24 @@
                 <div class="price">$7500</div>
                 <h2 class="item-title">POLLERA ECOCUERO</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20POLLERA ECOCUERO">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20cosultarte%20por%20POLLERA ECOCUERO">COMPRAR</a>
             </div>
             <div class="card-index test">
                 <div class="false-bg"></div>
                 <div class="price">$price</div>
                 <h2 class="item-title">PRÓXIMAMENTE</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta">COMPRAR</a>
             </div>
             <div class="card-index test">
                 <div class="false-bg"></div>
                 <div class="price">$price</div>
                 <h2 class="item-title">PRÓXIMAMENTE</h2>
                 <hr>
-                <a href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta">COMPRAR</a>
+                <a
+                    href="https://api.whatsapp.com/send?phone=+54%209%201133341558&text=Hola!%20Quiero%20hacerte%20una%20cosulta">COMPRAR</a>
             </div>
         </section>
     </main>
@@ -303,17 +323,40 @@
         let searchBtn = document.getElementById('search-btn');
         let titles = document.getElementsByClassName('item-title');
 
-        searchBtn.addEventListener('click', function(){
 
-            for(let i=0; i<titles.length;i++){
+        searhbar.addEventListener('keyup', function (e) {
+            const term = e.target.value.toLowerCase();
+            console.log(term);
 
-                if(titles[i].innerHTML.toLowerCase().includes(searhbar.value)){
-                    titles[i].parentElement.style.display="flex"
-                }else {
-                    titles[i].parentElement.style.display="none"
+            Array.from(titles).forEach(function (t) {
+
+                for (let i = 0; i < titles.length; i++) {
+
+                    if (titles[i].innerText.toLowerCase().includes(term)) {
+                        titles[i].parentElement.style.display = "flex";
+                        console.log(titles[i].innerText.toLowerCase().includes(term));
+                    } else {
+                        titles[i].parentElement.style.display = "none";
+                    }
                 }
-            }
+
+                let itemstitles = t.innerText;
+
+
+            })
         })
+
+        // searchBtn.addEventListener('click', function () {
+
+        //     for (let i = 0; i < titles.length; i++) {
+
+        //         if (titles[i].innerHTML.toLowerCase().includes(searhbar.value)) {
+        //             titles[i].parentElement.style.display = "flex"
+        //         } else {
+        //             titles[i].parentElement.style.display = "none"
+        //         }
+        //     }
+        // })
     </script>
 </body>
 
